--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ After that, just use a helper function to print all these values
 and place them on a table for better organization.
         
 In my test function, I compare an array returned by fizzBuzz() function
-with the predefined one. In case they are equals the test passes otherwise
-return the reason of the failure.
+with the predefined one. In case they are equal the test passes otherwise
+returns the reason of the failure.
 
         </pre>
         <div style = "background-color: lightGray">
